Project/iac/modules/ec2/main.tf
# Security Group allowing SSH and HTTP access
resource "aws_security_group" "app_sg" {
  name        = "app-server-sg"
  description = "Allow SSH and HTTP"
  vpc_id      = var.vpc_id

  ingress {
  description = "SSH from my IP"
  from_port   = 22
  to_port     = 22
protocol    = "tcp"
  cidr_blocks = ["142.116.23.55/32"]
}


  ingress {
    description = "HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "app-server-sg"
  }
}

# EC2 instance in public subnet
resource "aws_instance" "app_server" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  subnet_id                   = var.public_subnet_id
  vpc_security_group_ids      = [aws_security_group.app_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "HospitalAppServer"
  }
}
